# image-meta

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-Apache-2.0  LICENSE-MIT  Makefile  README.md  build.rs
example/: Cargo.toml  test.sh
example/src/: main.rs
src/: errors.rs  lib.rs  loader.rs  types.rs
src/loader/: bmp.rs  gif.rs  hdr.rs  jpeg.rs  png.rs  qoi.rs  riff.rs  webp.rs
test-files/: paw.hdr  paw.qoi
tests/: loader.rs
