[package]
name = "image-meta"
version = "0.1.4-alpha.0"
authors = ["anekos <anekos@snca.net>"]
edition = "2021"
description = "Image meta information loader"
categories = ["multimedia::images", "multimedia::encoding"]
keywords = ["image", "metadata"]
repository = "http://github.com/anekos/image-meta"
license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"

[dependencies]
byteorder = "1.4.3"
thiserror = "1.0.37"
strum = { version = "0.24", features = ["derive"] }

[dev-dependencies]
skeptic = "0.13.7"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]

[build-dependencies]
skeptic = "0.13.7"

[badges]
travis-ci = { repository = "anekos/image-meta" }
